# react-native-wishlist

./: .eslintrc.js  CONTRIBUTING.md  LICENSE  MGWishList.podspec  README.md  USAGE.md  package.json  react-native-tscodegen.json  react-native.config.js  tsconfig.json
.github/workflows/: build-android.yml  build-ios.yml  validate-js.yml
Example/: App.ts  App.tsx  AppTransformed.ts  FlatListApp.tsx  global.d.ts  index.tsx  metro.config.js  package.json  tsconfig.json
Example/Chat/: ChatItem.tsx  ChatList.tsx  Data.ts  index.ts
Example/android/: settings.gradle
Example/ios/: Podfile
Example/patches/: react-native+0.68.0-rc.2.patch  react-native+0.69.0.patch  react-native+0.70.0.patch  react-native-reanimated+3.0.0-rc.2.patch
Wishlist/: MGWishList.podspec  index.js  index.ts  package.json  react-native-tscodegen.json  tsconfig.json
Wishlist/android/: build.gradle
Wishlist/ios/: MGScrollViewOrchestrator.h  MGScrollViewOrchestrator.mm  MGTemplateContainerComponent.h  MGTemplateContainerComponent.mm  MGTemplateInterceptorComponent.h  MGTemplateInterceptorComponent.m  MGTemplateInterceptorComponent.mm  MGWishListComponent.h  MGWishListComponent.mm  WorkaroundManagers.h  WorkaroundManagers.mm
Wishlist/src/: EventHandler.ts  ForEach.tsx  ForEachBase.tsx  InflatorRepository.ts  NativeComponent.tsx  TemplateContext.tsx  TemplateValue.tsx  Test.tsx  WishList.tsx  WishListContext.tsx  createTemplateComponent.tsx  global.d.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/margelo/wishlist/: GlobalStateAdapter.java  WishList.java  WishListViewManager.java  WishlistManagerDelegate.java  WishlistManagerInterface.java
android/src/main/java/com/wishlist/: ContentContainer.kt  Orchestrator.kt  TemplateContainer.kt  TemplateContainerViewManager.kt  TemplateInterceptor.kt  TemplateInterceptorViewManager.kt  UIScheduler.java  UIScheduler.kt  Wishlist.kt  WishlistManagerModule.kt  WishlistPackage.java  WishlistPackage.kt  WishlistSoLoader.kt  WishlistViewManager.java  WishlistViewManager.kt
android/src/main/jni/: Android.mk  ErrorHandlerAndroid.cpp  ErrorHandlerAndroid.h  GlobalStateAdapter.h  JNIStateRegistry.cpp  JNIStateRegistry.h  MGAnimationSight.cpp  MGAnimationSight.hpp  MGBoundingBoxObserver.cpp  MGBoundingBoxObserver.hpp  MGOrchestratorCPPAdapter.cpp  MGOrchestratorCPPAdapter.hpp  MGUISchedulerAndroid.cpp  MGUISchedulerAndroid.hpp  MGVSyncRequester.cpp  MGVSyncRequester.hpp  MGWindowKeeper.cpp  MGWindowKeeper.hpp  OnLoad.cpp  Orchestrator.cpp  Orchestrator.hpp  UISchedulerAndroid.cpp  UISchedulerAndroid.h  WishlistComponentsRegistry.cpp  WishlistComponentsRegistry.h  WishlistManagerModule.cpp  WishlistManagerModule.hpp  wishlist.h
cpp/: ComponentsPool.cpp  ComponentsPool.h  GlobalState.cpp  GlobalState.h  ItemProvider.h  ItemProvider.hpp  ItemProvider.mm  MGErrorHandler.h  ReanimatedRuntimeHandler.cpp  ShadowNodeCopyMachine.cpp  ShadowNodeCopyMachine.h  ViewportObserver.h  ViewportObserver.hpp  ViewportObserver.mm  WishlistDefine.h  WishlistJsRuntime.cpp  WishlistJsRuntime.h
cpp/ContainerBoilerplate/: MGContainerEventEmitters.cpp  MGContainerProps.cpp  MGContainerProps.h  MGContainerRCTComponentViewHelpers.h  MGContainerShadowNodes.cpp  MGContainerShadowNodes.h
cpp/ContentContainer/: MGContentContainerComponentDescriptor.h  MGContentContainerShadowNode.cpp  MGContentContainerShadowNode.h  MGContentContainerState.cpp  MGContentContainerState.h
cpp/DataBinding/: MGBindingProvider.cpp  MGBindingProvider.hpp  MGDataBinding.cpp  MGDataBinding.hpp  MGDataBindingImpl.cpp  MGDataBindingImpl.hpp
cpp/DependencyInjection/: MGDI.cpp  MGDI.hpp  MGDIImpl.cpp  MGDIImpl.hpp  MGUIManagerHolder.cpp  MGUIManagerHolder.h
cpp/InterceptorBoilerplate/: MGInterceptorComponentDescriptors.h  MGInterceptorEventEmitters.h  MGInterceptorProps.cpp  MGInterceptorProps.h  MGInterceptorRCTComponentViewHelpers.h  MGInterceptorShadowNodes.h
cpp/ItemProvider/: ComponentsPool.cpp  ComponentsPool.h  ItemProvider.cpp  ItemProvider.h  ItemProvider.mm  ShadowNodeBinding.cpp  ShadowNodeBinding.h  ShadowNodeCopyMachine.cpp  ShadowNodeCopyMachine.h
cpp/MGViewportCarer/: MGPushChildrenListener.cpp  MGPushChildrenListener.hpp  MGVSyncRequester.cpp  MGVSyncRequester.hpp  MGViewportCarer.cpp  MGViewportCarer.hpp  MGViewportCarerImpl.cpp  MGViewportCarerImpl.h  MGViewportCarerImpl.mm  MGViewportCarerListener.hpp
cpp/TemplateContainer/: MGTemplateContainerComponentDescriptor.h  MGTemplateContainerShadowNode.cpp  MGTemplateContainerShadowNode.h  MGTemplateContainerState.cpp  MGTemplateContainerState.h
cpp/UIScheduler/: MGUIScheduler.cpp  MGUIScheduler.hpp
cpp/Wishlist/: MGWishlistComponentDescriptor.h  MGWishlistShadowNode.cpp  MGWishlistShadowNode.h  MGWishlistState.cpp  MGWishlistState.h
cpp/WishlistBoilerplate/: WishlistEventEmitters.h  WishlistProps.cpp  WishlistShadowNodes.cpp  WishlistShadowNodes.h  (+1 more)
example/: .eslintrc.js  Gemfile  app.json  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js
ios/: MGContentContainerComponent.h  MGContentContainerComponent.mm  MGDIIOS.cpp  MGDIIOS.h  MGErrorHandlerIOS.h  MGErrorHandlerIOS.mm  MGObjCJSIUtils.h  MGTemplateContainerComponent.h  MGTemplateContainerComponent.mm  MGTemplateInterceptorComponent.mm  MGWishListComponent.h  MGWishListComponent.mm  MGWishlistManager.h  MGWishlistManager.mm  MGWishlistQueue.h  MGWishlistQueue.m  WorkaroundManager.h  WorkaroundManager.m  WorkaroundManagers.h  WorkaroundManagers.mm
src/: Colors.ts  Component.tsx  ComponentPool.ts  EventHandler.ts  ForEach.tsx  IF.tsx  InflatorRepository.ts  NativeComponent.tsx  OrchestratorBinding.ts  Pressable.tsx  Switch.tsx  TemplateContext.tsx  TemplateItem.ts  TemplateValue.tsx  Test-declarative.tsx  Test-imperative.tsx  Test.tsx  Utils.ts  WishList.tsx  WishListContext.tsx  Wishlist.tsx  WishlistContext.tsx  WishlistData.ts  WishlistDataCopy.ts  WishlistIdContext.ts  WishlistJsRuntime.ts  createTemplateComponent.tsx  globalState.ts  index.ts  renderTemplate.ts
(+228 files in other folders)
